@@ -4,16 +4,11 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-BOTH="Both"
-CATEGORY ID="Category ID"
-COUNT="Count"
-DESCMOSTREAD="This Module shows a list of the currently published Articles which have the highest number of page views."
-FRONTPAGE ITEMS="Front Page Articles"
-MOD_MOSTREAD="Articles - Most Read"
-MODULE MODE="Module Mode"
+MOD_POPULAR_FIELD_CATEGORY_DESC="Selects Articles from a specific Category"
+MOD_POPULAR_FIELD_CATEGORY_LABEL="Category"
+MOD_POPULAR_FIELD_COUNT_DESC="The number of Articles to display (the default is 5)"
+MOD_POPULAR_FIELD_COUNT_LABEL="Count"
+MOD_POPULAR_FIELD_FEATURED_DESC="Show/Hide Articles designated as Featured"
+MOD_POPULAR_FIELD_FEATURED_LABEL="Featured Articles"
+MOD_POPULAR_XML_DESCRIPTION="This Module shows a list of the currently published Articles which have the highest number of page views."
 MOST READ CONTENT="Most Read Content"
-PARAMCATEGORYID="Selects Articles from a specific Category or set of Categories. Enter the Category ID from the Category Manager. To specify more than one Category, separate each ID with a comma."
-PARAMFRONTPAGEITEMS="Show/Hide Articles designated for the Front Page. This only works when in Article-only mode."
-PARAMSECTIONID="Selects Articles from a specific Section or set of Sections. Enter the Section ID taken from the Section Manager. To specify more than one Section, separate each ID with a comma."
-SECTION ID="Section ID"
-THE NUMBER OF ITEMS TO DISPLAY DEFAULT IS 5="The number of Articles to display (the default is 5)"
